# mlx-native

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE-candle  README.md
.claude-flow/data/: pending-insights.jsonl
_bmad-output/: epics-and-stories.md  prd-mlx-native-v0.2.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
benches/: bench_chunk_scan_pipeline.rs  bench_gather.rs  bench_hadamard.rs  bench_moe_dispatch.rs  bench_moe_q_qwen36_shape.rs  bench_mtl_event_cost.rs  bench_mul_mm_id_qwen36_ffn.rs  bench_prefill_qmatmul_shapes.rs  bench_quantized_matmul.rs  bench_sdpa.rs
docs/: moe-q-perf-audit-2026-04-27.md  wave5b2-iter1-baseline.md
examples/: cb_cost_calibration.rs  dispatch_cost_calibration.rs  tq_distribution_analyze.rs  tq_kernel_replay.rs
src/: buffer.rs  buffer_pool.rs  device.rs  dtypes.rs  encoder.rs  encoder_session.rs  error.rs  graph.rs  kernel_profile.rs  kernel_registry.rs  lib.rs  mem_ranges.rs  metal_capture.rs  residency.rs  tq_oracle.rs  turboquant.rs  weight.rs
src/gguf/: mod.rs
src/ops/: add_bias_row_2d.rs  argmax.rs  argsort.rs  bilinear_resize_2d.rs  block_merge_2x2.rs  chunk_gated_delta_rule.rs  chunk_gated_delta_rule_tri_solve_invert.rs  compute_g_beta.rs  copy.rs  cumsum.rs  dense_gemm.rs  dense_gemv_bf16.rs  dense_mm_bf16.rs  dense_mm_f16.rs  dense_mm_f32_f32.rs  elementwise.rs  embedding.rs  encode_helpers.rs  feature_concat.rs  flash_attn_prefill.rs  flash_attn_prefill_blk.rs  flash_attn_prefill_d512.rs  flash_attn_prefill_mask.rs  flash_attn_vec.rs  flash_attn_vec_affine4.rs  flash_attn_vec_tq.rs  flash_attn_vec_tq_hb.rs  fused_head_norm_rope.rs  fused_norm_add.rs  fused_residual_norm.rs  fwht_standalone.rs  gated_delta_net.rs  gated_delta_net_chunk.rs  gated_delta_net_chunk_o.rs  gated_delta_net_decode.rs  gated_delta_net_kkt.rs  gated_delta_net_recompute_wu.rs  gather.rs  gather_bench.rs  gelu.rs  (+43 more)
src/shaders/: add_bias_row_2d.metal  argmax.metal  argsort.metal  copy.metal  (+85 more)
tests/: bench_sdpa_tq.rs  bitwidth_ab.rs  dispatch_profile.rs  encoder_session_cb_count_smoke.rs  encoder_session_lifecycle.rs  encoder_session_multistage.rs  encoder_session_wait_event_smoke.rs  metal_capture.rs  metal_capture_happy_path.rs  perf_chunk_scan_chunk_o.rs  perf_chunk_scan_inter_state.rs  round_trip_identity.rs  test_argmax.rs  test_argsort.rs  test_auto_barrier.rs  test_barrier_counter.rs  test_batch_kernels.rs  test_bf16_kernels.rs  test_cb_label_propagation.rs  test_chunk_gated_delta_rule_fwd.rs  test_chunk_tri_solve_invert.rs  test_copy.rs  test_cumsum.rs  test_dense_gemm.rs  test_dense_mm_bf16.rs  test_dense_mm_f16.rs  test_dense_mm_f32_f32.rs  test_elementwise.rs  test_embedding.rs  test_flash_attn_prefill.rs  test_flash_attn_vec.rs  test_flash_attn_vec_tq.rs  test_fused_ops.rs  test_gated_delta_net.rs  test_gated_delta_net_chunk.rs  test_gated_delta_net_chunk_o.rs  test_gated_delta_net_decode.rs  test_gated_delta_net_kkt.rs  test_gated_delta_net_recompute_wu.rs  test_gather.rs  (+40 more)
(+17 files in other folders)
