[package]
name = "mlx-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
description = "Pure-Rust Metal GPU compute library for MLX-compatible inference on Apple Silicon"
license = "MIT OR Apache-2.0"

[lib]
name = "mlx_native"
path = "src/lib.rs"

[dependencies]
metal = "0.33"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
safetensors = "0.7"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
static_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
half = "2"

[[bench]]
name = "bench_quantized_matmul"
harness = false

[[bench]]
name = "bench_sdpa"
harness = false

[[bench]]
name = "bench_moe_dispatch"
harness = false
